[project]
name = "insurance-claim-dispute-resolution"
version = "0.1.0"
description = "OpenEnv environment for insurance claim dispute resolution"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "requests>=2.32.0",
    "openai>=1.58.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
